fix x-overflow in text-rendering

--- a/web/src/app/global.css
+++ b/web/src/app/global.css
@@ -77,3 +77,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* override tailwind */
+.prose {
+  @apply max-w-none text-justify;
+}
